# podcast-maker

./: README.md  pyproject.toml
app/: config.py  podcasts_lists.py
app/pages/: podcast_maker.py
app/template/: template_prompt.txt
app/utils/: add_bgm.py  create_script.py  get_contents_from_url.py  podcast_info.py  prep_filtering_contents.py  text2speech.py
outputs/podcasts/: info.csv
